adds swager auth, subscrib and shopping list
