# routes/api/subscribeRouter.js
@@ -1,7 +1,8 @@
 const express = require("express");
+const { subsribeMail } = require("../../controllers/subscribe");
 
 const router = express.Router();
 
-router.route("/");
+router.post("/", subsribeMail);
 
 module.exports = { subscribeRouter: router };
